[package]
name = "web_token"
version = "1.0.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
description = "Easy to use Web Token for Rust"
license = "MIT"
homepage = "https://github.com/terry90/rs_web_token"
repository = "https://github.com/terry90/rs_web_token"

[package.metadata.docs.rs]
all-features = true

[features]
serde_support = ["serde", "serde_derive"]
diesel_support = ["diesel", "diesel-derive-newtype"]

[dependencies]
rand  = "0.8.5"
serde = { version = "1.0.70", optional = true }
serde_derive = { version = "1.0.70", optional = true }
diesel = { version = "2.0.0", optional = true }
diesel-derive-newtype = { version = "2.0.0-rc.0", optional = true }

[dev-dependencies]
serde_json = "1.0.24"
